--- a/package.json
+++ b/package.json
@@ -1,11 +1,38 @@
 {
-  "name": "firstproject",
-  "version": "1.0.0",
-  "description": "This is my first project on NodeJS",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Didkivskyi Dima",
-  "license": "ISC"
+    "name": "firstproject",
+    "version": "1.0.0",
+    "description": "This is my first project on NodeJS",
+    "main": "index.js",
+    "scripts": {
+        "watch": "tsc -w",
+        "start": "nodemon ./dist/index.js"
+    },
+    "author": "Didkivskyi Dima",
+    "license": "ISC",
+    "dependencies": {
+        "cookie-parser": "^1.4.6",
+        "dotenv": "^16.0.1",
+        "express": "^4.18.1",
+        "http-status-codes": "^2.2.0",
+        "joi": "^17.6.0",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.5.2",
+        "nodemailer": "^6.7.8",
+        "typescript": "^4.7.4"
+    },
+    "devDependencies": {
+        "@types/cookie-parser": "^1.4.3",
+        "@types/express": "^4.17.13",
+        "@types/jsonwebtoken": "^8.5.9",
+        "@types/nodemailer": "^6.4.6",
+        "@typescript-eslint/eslint-plugin": "^5.36.1",
+        "@typescript-eslint/parser": "^5.36.1",
+        "eslint": "^8.23.1",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-prettier": "^4.2.1",
+        "nodemon": "^2.0.19"
+    }
 }
