--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "license": "ISC",
     "dependencies": {
         "cookie-parser": "^1.4.6",
+        "crypto-random-string": "^2.0.0",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "http-status-codes": "^2.2.0",
+        "install": "^0.13.0",
         "joi": "^17.6.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.5.2",
         "nodemailer": "^6.7.8",
+        "npm": "^8.19.2",
         "typescript": "^4.7.4"
     },
     "devDependencies": {
